--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,3 +18,5 @@
 @import '../sass/components/article';
 @import '../sass/components/author-bio';
 @import '../sass/components/categories';
+@import '../sass/components/recirc';
+@import '../sass/components/article-snippet';
