--- a/_includes/article-snippet.html
+++ b/_includes/article-snippet.html
@@ -1,41 +1,42 @@
-<a href="{{ site.url }}{{ post.url }}">
-{% if post.image.feature %}
-    <img class="article__feature-image" src=
-    {% if post.image.feature contains 'http' %}
-    "{{ post.image.feature }}"
+<section class="snippet">
+    <a href="{{ site.url }}{{ post.url }}">
+    {% if post.image.feature %}
+        <img class="snippet__feature-image" src=
+        {% if post.image.feature contains 'http' %}
+        "{{ post.image.feature }}"
+        {% else %}
+        "{{ site.url }}/assets/images/{{ post.image.feature }}"
+        {% endif %}
+        alt="{{ post.title }}">
     {% else %}
-    "{{ site.url }}/assets/images/{{ post.image.feature }}"
-    {% endif %}
-    alt="{{ post.title }}">
-{% else %}
-    <img src="http://placehold.it/1920x800/" alt="{{ post.title }}" >
-{% else %}
-    <img class="article__feature-image" src="http://placehold.it/1920x800/" alt="{{ post.title }} feature image" >
-{% endif %}
-</a>
-<h1 class="article__title">
-    <a href="{{ site.url }}{{ post.url }}" class="article__link" title="{{ post.title }}">{{ post.title }}</a>
-</h1>
-<div class="article__meta">
-    <span class="date-day">{{ post.date | date: "%-d" }}</span>
-    <span class="date-month">{{ post.date | date: "%b" | upcase }}</span>
-    <span class="date-year">{{ post.date | date: "%Y" }}</span>
-
-    {% if post.categories.size > 0 %}
-    {% for cat in post.categories %}
-        <a class="article__category" href="{{ site.url }}/categories/{{ cat }}">{{cat}}</a>{% unless forloop.last %}<span>, </span>{% endunless %}{% endfor %}
-    {% endif %}
-
-    {% if post.author %}
-        {% for author in post.author %}
-            <a class="article__author-link" href="{{ site.url }}/authors/{{- author -}}">
-            {{- author -}}
-            </a>
-            {%- unless forloop.last -%}
-            <span>,</span>
-            {% endunless %}
-        {% endfor %}
+        <img src="http://placehold.it/1920x800/" alt="{{ post.title }}" >
     {% else %}
-        {{ site.title }}
+        <img class="snippet__feature-image" src="http://placehold.it/1920x800/" alt="{{ post.title }}" >
     {% endif %}
-</div>
+    </a>
+    <h1 class="snippet__title">
+        <a href="{{ site.url }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">{{ post.title }}</a>
+    </h1>
+    <div class="snippet__meta">
+        <span class="meta__day">{{ post.date | date: "%-d" }}</span>
+        <span class="meta__month">{{ post.date | date: "%b" | upcase }}</span>
+        <span class="meta__year">{{ post.date | date: "%Y" }}</span>
+
+        {% if post.categories.size > 0 %}
+            <a class="meta__category-link" href="{{ site.url }}/categories/#{{ post.categories.first }}">{{post.categories.first}}</a>
+        {% endif %}
+
+        {% if post.author %}
+            {% for author in post.author %}
+                <a class="meta__author-link" href="{{ site.url }}/authors/{{- author -}}">
+                {{- author -}}
+                </a>
+                {%- unless forloop.last -%}
+                <span>,</span>
+                {% endunless %}
+            {% endfor %}
+        {% else %}
+            {{ site.title }}
+        {% endif %}
+    </div>
+</section>
