--- a/_layouts/article_listing.html
+++ b/_layouts/article_listing.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% for post in paginator.posts %}
-<article class="article">
+<article class="article-listing">
     {% include article-snippet.html %}
     {% if post.excerpt %}
     <p class="article-excerpt">
