--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -5,6 +5,7 @@ $hbc-highlight: #E94F3D;
 $hbc-border: #ccc;
 $hbc-gray: #777;
 $hbc-gray-2: #999;
+$hbc-gray-3: #4A4A4A;
 
 
 /**
@@ -26,27 +27,4 @@ html {
 
 img {
 	max-width: 100%;
-}
-
-.center-image {
-	display: inline-block;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.right-align {
-	float: right;
-	margin-left: 20px;
-}
-
-.left-align {
-	float: left;
-	margin-right: 20px;
-}
-
-.simple-border {
-	display: inline-block;
-	padding: 3px;
-	border: solid 1px #ccc;
 }
