--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -2,34 +2,72 @@
 $site-width: 1280px;
 $content-width: 1080px;
 
+// breakpoints
+$breakpoint-small: 375px;
+$breakpoint-medium: 768px;
+$breakpoint-large: 1024px;
+
 .container {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
     grid-auto-rows: minmax(100px, auto);
     grid-template-areas: 
-      ". hd hd hd   hd   hd   hd   hd   hd  hd   hd ."
-      "main main main main main main main main main main main main"
+      "hd hd hd hd   hd   hd   hd   hd   hd  hd   hd hd"
+      ". main main main main main main main main main main ."
       "ft ft ft ft   ft   ft   ft   ft   ft   ft   ft   ft";
+
+	@media screen and (max-width: $breakpoint-medium) {
+		grid-template-areas: 
+		      "hd hd hd hd   hd   hd   hd   hd   hd  hd   hd hd"
+		      "main main main main main main main main main main main main"
+		      "ft ft ft ft   ft   ft   ft   ft   ft   ft   ft   ft";
+	}
 }
 
 
 .content {
     grid-area: main;
-	padding-bottom: 100px;
 	margin: auto;
 	display: grid;
 	grid-template-columns: minmax(auto, $content-width);
 }
 
 
-// need to define breakpoint variables
+.center-image {
+	display: inline-block;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
+.right-align {
+	float: right;
+	margin-left: 20px;
 
-@media screen and (max-width: 1000px) {
-	.container {
-		grid-template-areas: 
-		      "hd hd hd hd   hd   hd   hd   hd   hd  hd   hd hd"
-		      "main main main main main main main main main main main main"
-		      "ft ft ft ft   ft   ft   ft   ft   ft   ft   ft   ft";
+	// center images on mobile
+	@media screen and (max-width: $breakpoint-medium) {
+		display: inline-block;
+	    position: relative;
+	    left: 50%;
+	    transform: translateX(-50%);
 	}
+}
+
+.left-align {
+	float: left;
+	margin-right: 20px;
+	
+	// center images on mobile
+	@media screen and (max-width: $breakpoint-medium) {
+		display: inline-block;
+	    position: relative;
+	    left: 50%;
+	    transform: translateX(-50%);
+	}
+}
+
+.simple-border {
+	display: inline-block;
+	padding: 3px;
+	border: solid 1px #ccc;
 }
