--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -82,9 +82,9 @@
         }
     }
 
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: $breakpoint-medium) {
         float: none;
-        width: 95%;
+        width: 90%;
         margin: 0 auto 20px auto;
 
     }
