added article share tools, svg icons, tags page

--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,4 +1,4 @@
-<section class="inner-wrapper categories">
+<section class="categories">
 	<h1 class="categories__title">Categories</h1>
 	<ul class="categories__category-list">
 	{% assign categories_list = site.categories %}
