--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -1,6 +1,7 @@
 //colors
 $hbc-black: #000000;
 $hbc-white: #ffffff;
+$hbc-off-white: #ffffff; // possibly #EFE7DF
 $hbc-highlight: #E94F3D;
 $hbc-border: #ccc;
 $hbc-gray: #777;
@@ -15,6 +16,9 @@ html {
   box-sizing: border-box;
 }
 
+body {
+	background-color: $hbc-off-white;
+}
 /**
  * Make all elements from the DOM inherit from the parent box-sizing
  * Since `*` has a specificity of 0, it does not override the `html` value
