--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,6 +1,6 @@
 .site-header {
     grid-area: hd;
-	background-color: $hbc-white;
+	background-color: $hbc-off-white;
 	color: $hbc-black;
 
 	&__logo {
