--- a/_includes/article-tags.html
+++ b/_includes/article-tags.html
@@ -1,7 +1,7 @@
 {% if page.tags.size > 0 %}
 <div class="article-tags">
 {% for tag in page.tags %}
-    <a class="article-tags__link" href="{{ site.url }}/tags/{{ tag }}">{{ tag }}</a>
+    <a class="article-tags__link" href="{{ site.url }}/tags/#{{ tag }}">{{ tag }}</a>
     {%- unless forloop.last -%}
     <span>,</span>
     {% endunless %}
