--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -27,6 +27,7 @@ layout: default
         </div>
         <h1 class="article__content__title" title="{{ page.title }}">{{ page.title }}</h1>
         <div class="article__content__read-time">{% include read-time.html %}</div>
+        <div class="article__content__share-buttons">{% include share-buttons.html %}</div>
         <div class="article__content__body">{{ content }}</div>
         <footer class="article__content__footer">
             {% include article-tags.html %}
@@ -57,29 +58,8 @@ layout: default
 </aside>
 
 
-<!-- <div class="share-buttons">
-    <h6>Share on: </h6>
-    <ul>
-        <li>
-            <a href="https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url }}" class="twitter btn" title="Share on Twitter"><i class="fa fa-twitter"></i><span> Twitter</span></a>
-        </li>
-        <li>
-            <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" class="facebook btn" title="Share on Facebook"><i class="fa fa-facebook"></i><span> Facebook</span></a>
-        </li>
-        <li>
-            <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" class="google-plus btn" title="Share on Google Plus"><i class="fa fa-google-plus"></i><span> Google+</span></a>
-        </li>
-        <li>
-            <a href="https://news.ycombinator.com/submitlink?u={{ site.url }}{{ page.url }}" class="hacker-news btn" title="Share on Hacker News"><i class="fa fa-hacker-news"></i><span> Hacker News</span></a>
-        </li>
-        <li>
-            <a href="https://www.reddit.com/submit?url={{ site.url }}{{ page.url }}" class="reddit btn" title="Share on Reddit"><i class="fa fa-reddit"></i><span> Reddit</span></a>
-        </li>
-    </ul>
-</div>
- --><!-- end share-buttons -->
-
-{% if site.owner.disqus-shortname and page.comments == true %}
+<!-- {% if site.owner.disqus-shortname and page.comments == true %}
 <div id="disqus_thread"></div>
 {% include disqus.html %}
 {% endif %}
+ -->
