--- a/assets/sass/components/_article.scss
+++ b/assets/sass/components/_article.scss
@@ -26,11 +26,15 @@
 		display: grid;
 		grid-template-columns: 90px 90px 1fr 90px ;
 	    grid-auto-rows: minmax(20px, auto);
+	    // grid-auto-rows: min-content;
 	    grid-template-areas:
 	    ". meta meta ."
 	    ". title title ."
 	    ". read-time body . "
+	    ". share body . "
+	    ". . body . "
 	    ". . footer . ";
+		align-items: start;
 		padding: 60px 0 90px 0;
 		margin-top: 200px;
 		background-color: $hbc-white;
@@ -75,8 +79,10 @@
 
 		&__read-time {
 			grid-area: read-time;
+			align-self: start;
 			margin-top: 32px;
 			color: $hbc-gray;
+			height: 100px;
 
 			.read-time__text-1,
 			.read-time__text-2,
@@ -84,6 +90,44 @@
 				display: block;
 				margin-bottom: 7px;
 			}
+		}
+
+		&__share-buttons {
+			grid-area: share;
+			align-self: start;
+			border-top: solid 1px $hbc-border;
+			width: 36px;
+			padding-top: 30px;
+			position: sticky;
+			top: -1px;
+
+			.share-buttons {
+				list-style-type: none;
+				padding: 0;
+				margin: 0;
+				width: 36px;
+
+				&__link-item {
+					padding: 0;
+					margin: 0 0 10px 0;
+					display: inline-block;
+
+					.hbc-svg-icon {
+						fill: $hbc-gray-2;
+
+						&:hover {
+							fill: $hbc-highlight;
+						}
+					}
+
+					&__link {
+
+					}
+
+				}
+
+			}
+
 		}
 
 		&__body {
