--- a/_includes/featured-articles.html
+++ b/_includes/featured-articles.html
@@ -1,19 +1,19 @@
 <!-- display the 1st article in a big way-->
 {% for post in site.posts | limit: 1 %}
-<div class="article article--featured">
-    {% include article-snippet.html %}
+<div class="homepage article--featured">
+    {% include article-snippet.html excerpt=true featureImage=true %}
 </div>
 {% endfor %}
 <!-- display the 2nd and 3rd posts in a smaller way-->
 {% for post in site.posts | limit: 2 offset: 1 %}
-<div class="article article--sub-featured">
-    {% include article-snippet.html %}
+<div class="homepage article--sub-featured">
+    {% include article-snippet.html excerpt=true featureImage=true %}
 </div>
 {% endfor %}
 <!-- this is the rest of the posts listed with no feature images-->
-{% for post in site.posts offset: 3 %}
-<div class="article article--remaining">
-    {% include article-snippet_no-images.html %}
+{% for post in site.posts offset: 3 | limit: 5 %}
+<div class="homepage article--remaining">
+    {% include article-snippet.html %}
 </div>
 {% endfor %}
-<a class="more-link" href="/insights/" title="more articles">More Insights</a>
+<a class="homepage__more-link" href="/insights/" title="more articles">More Insights</a>
