--- a/assets/sass/components/_article.scss
+++ b/assets/sass/components/_article.scss
@@ -17,7 +17,7 @@
 			width: 100%;
 			// background: linear-gradient(to bottom right, rgba(189, 52, 52, 0.9), rgba(0,0,0, 0.5));
 			mix-blend-mode: soft-light;
-			background-color: rgba(201,0,56, 0.8);
+			background-color: rgba(210, 0, 0, 0.8);
 		}
 	}
 
@@ -82,7 +82,6 @@
 			align-self: start;
 			margin-top: 32px;
 			color: $hbc-gray;
-			height: 100px;
 
 			.read-time__text-1,
 			.read-time__text-2,
@@ -95,15 +94,15 @@
 		&__share-buttons {
 			grid-area: share;
 			align-self: start;
-			border-top: solid 1px $hbc-border;
 			width: 36px;
 			padding-top: 30px;
 			position: sticky;
 			top: -1px;
 
 			.share-buttons {
+				border-top: solid 1px $hbc-border;
 				list-style-type: none;
-				padding: 0;
+				padding: 20px 0 0 0;
 				margin: 0;
 				width: 36px;
 
@@ -112,12 +111,14 @@
 					margin: 0 0 10px 0;
 					display: inline-block;
 
+						&:hover {
+							.hbc-svg-icon {
+								fill: $hbc-highlight;
+							}
+						}
+
 					.hbc-svg-icon {
 						fill: $hbc-gray-2;
-
-						&:hover {
-							fill: $hbc-highlight;
-						}
 					}
 
 					&__link {
@@ -183,6 +184,8 @@
 			    ". title title ."
 			    ". read-time read-time read-time"
 			    ". body body . "
+			    "share share share share"
+			    "share share share share"
 			    ". footer footer . ";
 
 		    &__title {
@@ -196,6 +199,25 @@
 				.read-time__text-3 {
 					display: inline-block;
 					margin: 0;
+				}
+			}
+
+			&__share-buttons {
+				bottom: 0px;
+				width: 100vw;
+
+				.share-buttons {
+					display: block;
+					background-color: #fff;				
+					width: 100%;
+					height: 73px;
+					padding: 20px;
+
+					&__link-item {
+						margin: 0 10px 10px 0;
+						float: left;
+					}
+
 				}
 			}
 
