added placeholder css for homepage and insights page, fixed bug on mobile article layout

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,6 +13,7 @@
 @import '../sass/components/header';
 @import '../sass/components/footer';
 @import '../sass/components/navigation';
+@import '../sass/components/homepage';
 @import '../sass/components/sidebar';
 @import '../sass/components/article-listing';
 @import '../sass/components/article';
