--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,3 +21,5 @@
 @import '../sass/components/categories';
 @import '../sass/components/recirc';
 @import '../sass/components/article-snippet';
+@import '../sass/components/author-page';
+@import '../sass/components/authors-page';
