--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -49,8 +49,7 @@ $breakpoint-large: 1024px;
 		display: inline-block;
 		float: none;
 	    position: relative;
-	    // left: 50%;
-	    // transform: translateX(-50%);
+		margin-left: 0;
 	}
 }
 
