--- a/assets/sass/components/_homepage.scss
+++ b/assets/sass/components/_homepage.scss
@@ -1,14 +1,5 @@
-.homepage,
-.article-listing {
-	.snippet {
-		padding: 60px 0;
-		border-bottom: solid 1px $hbc-border;
+.homepage {
 
-		&__feature-image {
-			margin-bottom: 20px;
-		}
-
-	}
 
 	&__more-link {
 		margin: 60px 0;
