get author bio from site.authors collection

--- a/_layouts/authors.html
+++ b/_layouts/authors.html
@@ -4,7 +4,7 @@ title: Authors
 ---
 
 <section class="authors-page">
-	<h1 class="authors-page__title">Authors</h1>
+	<h1 class="authors-page__title">Featured Authors</h1>
 
 {% for author in site.authors %}
 	<h3><a href="{{ author.url }}">{{author.name}}</a></h3>
