made seo friends author urls

--- a/_includes/article-snippet.html
+++ b/_includes/article-snippet.html
@@ -33,7 +33,7 @@
 
         {% if post.author != '' %}
             {% for authorName in post.author %}
-                {% assign authorLink = authorName | replace: ' ', '_' %}
+                {% assign authorLink = authorName | replace: ' ', '-' | downcase %}
                 <!-- if author exists in site.authors, send user to author's page -->
                 {% for a in site.authors %}
                     {%if a.name == authorName %}
