refactoring config and gulp files

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="{{ site.url }}/assets/js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}/assets/js/jquery-3.2.1.js"></script>
 <script type="text/javascript" src="{{ site.url }}/assets/js/main.js"></script>
 {% if site.owner.google.analytics %}
 <!-- Asynchronous Google Analytics snippet -->
