updating url structure for production

--- a/_includes/featured-articles.html
+++ b/_includes/featured-articles.html
@@ -16,4 +16,4 @@
     {% include article-snippet.html %}
 </div>
 {% endfor %}
-<a class="homepage__more-link" href="/insights/" title="more articles">More Insights</a>
+<a class="homepage__more-link" href="{{ site.url }}{{ site.baseurl }}/insights/" title="more articles">More Insights</a>
