--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section class="author-page">
-	<a href="/authors/">< All Authors</a>
+	<a href="{{ site.url }}{{ site.baseurl }}//authors/">< All Authors</a>
 	<h1 class="author-page__title">{{page.name}}</h1>
 	<p>{{page.mini-bio}}</p>
 </section>
