--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -13,21 +13,21 @@ layout: default
 {% if paginator.total_pages > 1 %}
 <div class="pagination">
 {% if paginator.previous_page %}
-    <a rel="prev" href="{{ paginator.previous_page_path | prepend: site.url | replace: '//', '/' }}">&laquo; Prev</a>
+    <a rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
 {% endif %}
 
 {% for page in (1..paginator.total_pages) %}
     {% if page == paginator.page %}
     <em>{{ page }}</em>
     {% elsif page == 1 %}
-    <a href="{{ '/insights' | prepend: site.url | replace: '//', '/' }}">{{ page }}</a>
+    <a href="{{ '/insights' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
     {% else %}
-    <a href="{{ '/insights/' | prepend: site.url | replace: '//', '/' | append: page }}">{{ page }}</a>
+    <a href="{{ '/insights/' | prepend: site.baseurl | replace: '//', '/' | append: page }}">{{ page }}</a>
     {% endif %}
   {% endfor %}
 
   {% if paginator.next_page %}
-    <a rel="next" href="{{ paginator.next_page_path | prepend: site.url | replace: '//', '/' }}">Next &raquo;</a>
+    <a rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
   {% endif %}
 </div>
 {% endif %}
