--- a/_includes/article-snippet.html
+++ b/_includes/article-snippet.html
@@ -2,14 +2,14 @@
 {% assign showFeatureImage = include.featureImage %}
 
 <section class="snippet">
-    <a href="{{ site.url }}{{ post.url }}">
+    <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}">
     {% if showFeatureImage == true  %}
         {% if post.image.feature %}
             <img class="snippet__feature-image" src=
             {% if post.image.feature contains 'http' %}
             "{{ post.image.feature }}"
             {% else %}
-            "{{ site.url }}/assets/images/{{ post.image.feature }}"
+            "{{ site.url }}{{ site.baseurl }}/assets/images/{{ post.image.feature }}"
             {% endif %}
             alt="{{ post.title }}">
         {% else %}
@@ -20,7 +20,7 @@
     {% endif %}
     </a>
     <h1 class="snippet__title">
-        <a href="{{ site.url }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">{{ post.title }}</a>
+        <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">{{ post.title }}</a>
     </h1>
     <div class="snippet__meta">
         <span class="meta__day">{{ post.date | date: "%-d" }}</span>
@@ -29,15 +29,15 @@
 
         {% if post.categories.size > 0 %}
             {% for cat in site.category %}
-                {%if cat.name == post.categories.first %}
+                {%if cat.name == post.categories %}
                     {% assign featureCategory = cat %}
                 {% endif %}
             {% endfor %}
 
-            {% if featureCategory != nil %}
-                <a class="meta__category-link" href="{{ site.url }}/category/{{ post.categories.first }}">{{post.categories.first}}</a>
+            {% if featureCategory != nil and featureCategory != '' %}
+                <a class="meta__category-link" href="{{ site.url }}{{ site.baseurl }}/category/{{ post.categories.first }}">{{post.categories.first}}</a>
             {% else %}
-                <a class="meta__category-link" href="{{ site.url }}/categories/#{{ post.categories.first }}">{{post.categories.first}}</a>
+                <a class="meta__category-link" href="{{ site.url }}{{ site.baseurl }}/categories/#{{ post.categories.first }}">{{post.categories.first}}</a>
             {% endif %}
         {% endif %}
 
@@ -47,7 +47,7 @@
                 <!-- if author exists in site.authors, send user to author's page -->
                 {% for a in site.authors %}
                     {%if a.name == authorName %}
-                    <a class="meta__author-link" href="{{ site.url }}/authors/{{ authorLink }}">
+                    <a class="meta__author-link" href="{{ site.url }}{{ site.baseurl }}/authors/{{ authorLink }}">
                     {% endif %}
                 {% endfor %}
 
@@ -68,7 +68,7 @@
         {% endif %}
     </div>
     {% if post.excerpt and showExcerpt == true %}
-        <a href="{{ site.url }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">
+        <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">
         <p class="snippet__excerpt">
         {{ post.excerpt | strip_html | truncatewords: 70 }}
     {% endif %}
