--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -21,7 +21,7 @@
 	    {% for article in pages_list %}
 	      {% if article.title != null %}
 	      {% if group == null or group == article.group %}
-	      <li class="categories-page__list-item"><a class="categories-page__list-item__link"href="{{ site.url }}{{ article.url }}">{{ article.title }}<span class="entry-date"><time datetime="{{ article.date | date_to_xmlschema }}" itemprop="datePublished">{{ article.date | date: "%B %d, %Y" }}</time></span></a></li>
+	      <li class="categories-page__list-item"><a class="categories-page__list-item__link"href="{{ site.url }}{{ site.baseurl }}{{ article.url }}">{{ article.title }}<span class="entry-date"><time datetime="{{ article.date | date_to_xmlschema }}" itemprop="datePublished">{{ article.date | date: "%B %d, %Y" }}</time></span></a></li>
 	      {% endif %}
 	      {% endif %}
 	    {% endfor %}
