--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<ul class="navigation navigation--footer">
 		{% for link in site.data.navigation.footer-links %}
-		  <li class="navigation__link-item"><a href="{{ site.url }}{{ link.url }}" class="navigation__link"><span class="navigation__link-highlight">{{ link.title }}</span></a></li>
+		  <li class="navigation__link-item"><a href="{{ site.url }}{{ site.baseurl }}/{{ link.url }}" class="navigation__link"><span class="navigation__link-highlight">{{ link.title }}</span></a></li>
 		{% endfor %}
 	</ul>
   <p class="copyright">&copy; {{ site.time | date: '%Y' }} {{ site.title }}, {{ site.tagline }}</i></p>
