--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header id="site-header" class="site-header" >
-	<a class="site-header__logo" href="{{ site.url }}/">
-		<img src="{{ site.url }}/assets/images/hbc-tech-beta.svg"/>
+	<a class="site-header__logo" href="{{ site.url }}{{ site.baseurl }}/">
+		<img src="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-tech-beta.svg"/>
 	</a>
 	<ul class="navigation">
 		{% for link in site.data.navigation.header-links %}
-		  <li class="navigation__link-item"><a href="{{ site.url }}{{ link.url }}" class="navigation__link"><span class="navigation__link-highlight">{{ link.title }}</span></a></li>
+		  <li class="navigation__link-item"><a href="{{ site.url }}{{ site.baseurl }}/{{ link.url }}" class="navigation__link"><span class="navigation__link-highlight">{{ link.title }}</span></a></li>
 		{% endfor %}
 	</ul>
 </header>
