--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="{{ site.url }}/assets/js/jquery-3.2.1.js"></script>
-<script type="text/javascript" src="{{ site.url }}/assets/js/main.js"></script>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
 {% if site.owner.google.analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
