--- a/_includes/share-buttons.html
+++ b/_includes/share-buttons.html
@@ -1,29 +1,29 @@
 <ul class="share-buttons">
     <li class="share-buttons__link-item">
-        <a href="https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url }}" class="share-buttons__link" title="Share on Twitter">
+        <a href="https://twitter.com/intent/tweet?text={{ site.url }}{{ site.baseurl }}/{{ page.url }}" class="share-buttons__link" title="Share on Twitter">
             <svg class="hbc-svg-icon" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
-                <use class="hbc-svg-icon--twitter" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}/assets/images/hbc-icons.svg#twitter"></use>
+                <use class="hbc-svg-icon--twitter" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#twitter"></use>
             </svg>
         </a>
     </li>
     <li class="share-buttons__link-item">
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}/&source={{ page.url }}&title={{ page.title }}" class="share-buttons__link" title="Share on Linkedin">
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ site.baseurl }}/&source={{ page.url }}&title={{ page.title }}" class="share-buttons__link" title="Share on Linkedin">
             <svg height="36" width="36" xmlns="http://www.w3.org/2000/svg">
-                <use class="hbc-svg-icon" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}/assets/images/hbc-icons.svg#linkedin" ></use>
+                <use class="hbc-svg-icon" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#linkedin" ></use>
             </svg>
         </a>
     </li>
     <li class="share-buttons__link-item">
-        <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" class="share-buttons__link" title="Share on Facebook">
+        <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ site.baseurl }}/{{ page.url }}" class="share-buttons__link" title="Share on Facebook">
             <svg height="36" width="36" xmlns="http://www.w3.org/2000/svg">
-                <use class="hbc-svg-icon" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}/assets/images/hbc-icons.svg#facebook" ></use>
+                <use class="hbc-svg-icon" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#facebook" ></use>
             </svg>
         </a>
     </li>
     <li class="share-buttons__link-item">
-        <a href="https://www.reddit.com/submit?url={{ site.url }}{{ page.url }}" class="share-buttons__link" title="Share on Reddit">
+        <a href="https://www.reddit.com/submit?url={{ site.url }}{{ site.baseurl }}/{{ page.url }}" class="share-buttons__link" title="Share on Reddit">
             <svg height="36" width="36" xmlns="http://www.w3.org/2000/svg">
-                <use class="hbc-svg-icon" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}/assets/images/hbc-icons.svg#reddit" ></use>
+                <use class="hbc-svg-icon" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#reddit" ></use>
             </svg>
         </a>
     </li>
