--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,13 @@
         <!-- {% include og-seo.html %} -->
         {% seo %}
 
-        <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
+        <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/main.css">
         <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700" rel="stylesheet">
 
         <!-- Icons -->
         <!-- 16x16 -->
-        <link rel="shortcut icon" href="{{ site.url }}/assets/images/favicon.ico">
+        <link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/assets/images/favicon.ico">
     </head>
 
     <body class="container" aria-label="Content">
