--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,13 @@
 		<img src="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-tech-beta.svg"/>
 	</a>
 	<ul class="navigation">
+		{% assign currentPage = page.url | replace: "/", "" %}
 		{% for link in site.data.navigation.header-links %}
-		  <li class="navigation__link-item"><a href="{{ site.url }}{{ site.baseurl }}/{{ link.url }}" class="navigation__link"><span class="navigation__link-highlight">{{ link.title }}</span></a></li>
+		  <li class="navigation__link-item">
+		  	<a href="{{ site.url }}{{ site.baseurl }}/{{ link.url }}" class="navigation__link {% if currentPage == link.url %}navigation__link--current{% endif %}">
+		  		<span class="navigation__link-highlight">{{ link.title }}</span>
+		  	</a>
+		  </li>
 		{% endfor %}
 	</ul>
 </header>
