add author's job title to give article more clout

--- a/_includes/article-snippet.html
+++ b/_includes/article-snippet.html
@@ -44,21 +44,21 @@
         {% if post.author != '' %}
             {% for authorName in post.author %}
                 {% assign authorLink = authorName | replace: ' ', '-' | downcase %}
-                <!-- if author exists in site.authors, send user to author's page -->
+                <!-- if author exists in site.authors, create link to author's page -->
                 {% for a in site.authors %}
-                    {%if a.name == authorName %}
+                    {% if a.name == authorName %}
                     <a class="meta__author-link" href="{{ site.url }}{{ site.baseurl }}/authors/{{ authorLink }}">
                     {% endif %}
                 {% endfor %}
-
-                {{authorName}}
-
+                <!-- render the author name regardless if they're a featured author -->
+                {{- authorName -}}
+                <!-- if author exists in site.authors, close link to author's page -->
+                <!-- add author's job title to give article more clout -->
                 {% for a in site.authors %}
-                    {%if a.name == authorName %}
-                    </a>
+                    {% if a.name == authorName %}
+                    </a>{%if a.job-title %}<span class="meta__author-job-title">, {{a.job-title}}</span>{% endif %}
                     {% endif %}
                 {% endfor %}
-
                 {%- unless forloop.last -%}
                 <span>,</span>
                 {% endunless %}
