--- a/assets/sass/components/_article-listing.scss
+++ b/assets/sass/components/_article-listing.scss
@@ -1,3 +1,87 @@
+// insights page
 .article-listing {
 
+	&__sub-featured {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-auto-rows: minmax(100px, auto);
+		border-top: solid 1px #ccc;
+		border-bottom: solid 1px #ccc;
+		padding: 40px 0;
+		margin-bottom: 40px;
+
+		.snippet {
+			padding: 40px 40px 40px 0;
+
+			&:first-child {
+				border-right: solid 1px #ccc;
+			}	
+
+			&:last-child {
+				padding-right: 0;
+				padding-left: 40px;
+			}
+		}	
+	}
+
+	&__remaining  {
+		display: grid;
+		grid-template-columns: 25% 75%;
+		grid-auto-rows: minmax(100px, auto);
+	    grid-template-areas:
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    ;
+		align-items: start;
+		border-bottom: solid 1px #ccc;
+		padding: 20px 0 40px 0;
+
+		.featured-topics {
+			grid-area: ft;
+			height: 100%;
+			border-right: solid 1px #ccc;
+			margin-right: 40px;
+
+			&__title {
+				padding: 0;
+				margin: 15px 0;
+			}
+		}
+
+		.snippet {
+			grid-area: art;
+			padding: 10px 0 40px 20px;
+			grid-row: auto;
+			border-bottom: solid 1px #ccc;
+			margin-bottom: 40px;
+		}
+
+	}
+
+	@media screen and (max-width: $breakpoint-medium) {
+		padding: 10px;
+
+		&__sub-featured {
+			grid-template-columns: 1fr;
+			padding: 0;
+
+			.snippet {
+				border: solid 0px #ccc;
+				border-bottom: solid 1px #ccc;
+				padding: 40px 0;
+
+				&:first-child {
+					border-right: solid 0px #ccc;
+				}	
+
+				&:last-child {
+					border: 0px;
+					margin-left: 0px;
+					margin-top: 0px;
+					padding-left: 0px;
+				}
+			}
+		}		
+	}
 }
