--- a/assets/sass/components/_recirc.scss
+++ b/assets/sass/components/_recirc.scss
@@ -3,6 +3,7 @@
 	padding-top: 20px;
 	padding-bottom: 100px;
 
+
 	.header {
 
 		&__title {
@@ -42,6 +43,8 @@
 		&__item {
 			padding: 40px 40px 40px 0;
 
+	        opacity: 0;
+
 			&:first-child {
 				border-right: solid 1px #ccc;
 				border-bottom: solid 1px #ccc;
@@ -58,7 +61,18 @@
 			&:nth-child(2) {
 				padding-left: 40px;
 			}
-		}	
+		}
+
+
+	    .reveal {
+	        animation-name: fade-in-and-up;
+	        animation-duration: 200ms;
+	        animation-delay: 0;
+	        animation-timing-function: ease-out; 
+	        animation-direction: normal;
+	        animation-iteration-count: 1;
+	        animation-fill-mode: forwards;	        	
+	    }	
 	}
 
 	@media screen and (max-width: $breakpoint-medium) {
@@ -90,3 +104,15 @@
 		}		
 	}
 }
+
+@keyframes fade-in-and-up {
+    from { 
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to { 
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
