moved animations to separate file

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,7 @@
 @import '../sass/base/common';
 @import '../sass/base/layout';
 @import '../sass/base/typography';
+@import '../sass/base/animations';
 @import '../sass/components/header';
 @import '../sass/components/footer';
 @import '../sass/components/navigation';
