--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -2,8 +2,7 @@
     display: flex;
     float: right;
     width: 350px;
-    margin-top: 30px;
-    margin-right: 30px;
+    margin: 30px 30px 40px 0;
     padding: 0;
     
     
