--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,11 +1,9 @@
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.2.1.js"></script>
-<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/underscore-min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/plugins/CSSPlugin.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/easing/EasePack.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenLite.min.js"></script>
-<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/ScrollMagic.min.js"></script>
-<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/debug.addIndicators.min.js"></script>
-<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/animation.gsap.js"></script>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/greensock/plugins/CSSPlugin.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/greensock/TweenLite.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/scrollmagic/ScrollMagic.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/scrollmagic/debug.addIndicators.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/scrollmagic/animation.gsap.min.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
 
 {% if site.owner.google.analytics %}
